nsgtemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "resources": [
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2020-04-01",
        "name": "[parameters('nsgName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowSSH",
              "properties": {
                "priority": 1000,
                "access": "Allow",
                "direction": "Inbound",
                "protocol": "Tcp",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "22",
                "description": "Allow SSH",
                "destinationPortRanges": [],
                "sourcePortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowHTTP",
              "properties": {
                "priority": 2000,
                "access": "Allow",
                "direction": "Inbound",
                "protocol": "Tcp",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "80",
                "description": "Allow HTTP",
                "destinationPortRanges": [],
                "sourcePortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    ],
    "parameters": {
      "nsgName": {
        "type": "string",
        "metadata": {
          "description": "Name of the Network Security Group"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location of the NSG"
        }
      }
    }
  }
